// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform tests allow prettier config options 1`] = `
"<svg data-test=\\"svg-test\\" />
"
`;

exports[`transform tests clean attributes 1`] = `
"<svg fill=\\"red\\" />
"
`;

exports[`transform tests convert attributes 1`] = `
"<svg className=\\"test\\" data-name=\\"svg\\" fillRule=\\"evenodd\\" />
"
`;

exports[`transform tests convert inline styles to style objects 1`] = `
"<svg style={{ marginLeft: 20, paddingTop: 20 }} />
"
`;

exports[`transform tests convert nested nodes 1`] = `
"<svg width=\\"660\\" height=\\"220\\" style={{ outline: \\"1px solid red\\" }}>
  <defs>
    <clipPath id=\\"a\\">
      <path d=\\"M0 0l75 100 150 75-25-125z\\" />
    </clipPath>
  </defs>
  ><circle cx=\\"110\\" cy=\\"110\\" r=\\"100\\" fill=\\"#9c6\\" clip-path=\\"url(#a)\\" />
</svg>
"
`;

exports[`transform tests don't convert "clip-path" 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 45 45\\">
  <path clip-path=\\"url(#SVGID_2_134rwd)\\" d=\\"M43 24c1.1-1.5 2.3-3\\" />
</svg>
"
`;

exports[`transform tests quote string style values 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 45 45\\">
  <path style={{ marginLeft: \\"auto\\" }} d=\\"M43 24c1.1-1.5 2.3-3\\" />
</svg>
"
`;

exports[`transform tests remove unnecessary nodes 1`] = `
"<svg />
"
`;
